fix(card): add width and height to fix object-fit cover on Firefox

--- a/components/ui/card/styles.scss
+++ b/components/ui/card/styles.scss
@@ -43,6 +43,8 @@ $summary-color: #aaa;
 
     img {
       object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
 
